--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-      "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-      }
+    "DataApi": {
+        "Endpoint": "https://www.fantaformazione.com/wp-json/fantaformazione/v1/read/?C=calciatori&deleted=0&sort=nome&sort_dir=asc&paging=0&meta=1&ruolo=&_wpnonce=29da0e1394"
     },
-"AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
