refactoring, fixes and features for first working version

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
     "DataApi": {
-        "Endpoint": "https://www.fantaformazione.com/wp-json/fantaformazione/v1/read/?C=calciatori&deleted=0&sort=nome&sort_dir=asc&paging=0&meta=1&ruolo=&_wpnonce=29da0e1394"
+        "Endpoint": "https://www.fantaformazione.com/wp-json/fantaformazione/v1/read/?C=calciatori&deleted=0&sort=nome&sort_dir=asc&paging=0&meta=1&ruolo="
     },
     "Logging": {
         "LogLevel": {
