chaged favicon + added target framework 5.0.0rc

--- a/Server/FantasyAuction.Server.csproj
+++ b/Server/FantasyAuction.Server.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>netcoreapp5.0.0-rc.1.20451.17</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
