--- a/Server/FantasyAuction.Server.csproj
+++ b/Server/FantasyAuction.Server.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-        <TargetFramework>netcoreapp5.0.0-rc.1.20451.17</TargetFramework>
+        <TargetFrameworks>netcoreapp3.1;netcoreapp5.0.0-rc.1.20451.17</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
